fixed hovering pos on tablet

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ footer {
     }
     .desc {
         font-size: 1.75rem;
-        top: 60%;
+        top: 50%;
     }
     
 }
@@ -96,7 +96,7 @@ footer {
     
     .desc {
         font-size: 1.5rem;
-        top: 40%;
+        top:40%;
     }
 
     h1 {
